<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="its.nugrohodimas.capstonebangkit.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_imunitation"
        android:name="its.nugrohodimas.capstonebangkit.ui.imunitation.ImunitationFragment"
        android:label="@string/imunitation"
        tools:layout="@layout/fragment_imunitation" />

    <fragment
        android:id="@+id/navigation_nutrition"
        android:name="its.nugrohodimas.capstonebangkit.ui.nutrition.NutritionFragment"
        android:label="@string/nutrition"
        tools:layout="@layout/fragment_nutrition" />
    <fragment
        android:id="@+id/navigation_mom"
        android:name="its.nugrohodimas.capstonebangkit.ui.mom.MomFragment"
        android:label="@string/mom" />
</navigation>